--- a/templates/backOffice/default/assets/less/bootstrap/dropdowns.less
+++ b/templates/backOffice/default/assets/less/bootstrap/dropdowns.less
@@ -213,3 +213,9 @@
   }
 }
 
+// Enlarge order dropdown menu to prevent wrapping in some languages
+#orders_menu {
+    .dropdown-menu {
+        min-width: 230px;
+    }
+}
